--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,6 +7,6 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 # Add source to this project's executable.
-add_executable (JobSystem "FiberSandbox.cpp"  "SpinLock.h" "Fiber.cpp" "Dispatcher.cpp" "WorkerThread.cpp" "WorkerThread.h" "ResourcePool.h" "LockedQueue.h" )
+add_executable (Hustle "FiberSandbox.cpp"  "SpinLock.h" "Fiber.cpp" "Dispatcher.cpp" "WorkerThread.cpp" "WorkerThread.h" "ResourcePool.h" "LockedQueue.h" )
 
 
